--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -44,7 +46,7 @@
 
     <div class="retirement">
       <img src="imgs/retirement.jpg">
-      <div class="right-section">
+      <div class="sub-section">
         <div class="description">
           <h2>A better residential <br> retirement model.</h2>
           <p>HoneyCo Homes is rethinking the traditional retirement living model. By harnessing with the community, you now have access to the world's first distributed retirement community.</p>
@@ -61,9 +63,86 @@
         <a href="#" class="btn-yellow">Learn More</a>
       </div>
     </div>
+
+    <div class="gallery">
+      <div class="wrapper">
+        <h2>A smart home, at your fingertips.</h2>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="imgs/gallery.png">
+            </div>
+            <div class="item">
+              <img src="imgs/gallery.png">
+            </div>
+          </div>
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <img src="imgs/left-arrow.png">
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <img src="imgs/right-arrow.png">
+          </a>
+        </div>
+        <p>Can't remember if you turned off the stove? Is the door locked? <br>
+        No worries. With a HoneyCo Home, peace of mind is always at hand.</p>
+        <a href="#" class="btn-yellow">Learn More</a>
+      </div>
+    </div>
+
+    <div class="community">
+      <div class="sub-section">
+        <div class="description">
+          <h2>A grassroots community at your doorstep.</h2>
+          <p>Your in-person community ambassador will help keep you connected with the people, events and opportunities around you.</p>
+          <a href="#" class="btn-yellow">Learn More</a>
+        </div>
+      </div>
+      <img src="imgs/community.jpg">
+    </div>
+
+    <div class="connect">
+      <h3>Get Connected. Stay Connected.</h3>
+      <p>Sign up to receive updates from HoneyCo and apply for early access</p>
+      <form action="#">
+        <div class="input-group">
+           <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter your email for updates" required>
+           <button class="btn btn-lg" type="submit">Submit</button>
+        </div>
+       </form>
+    </div>
+
+    <div class="footer">
+      <img class="bg-logo" src="imgs/bg-logo.png">
+      <div class="wrapper">
+        <div class="col-lg-offset-6 col-lg-6">
+          <div class="col-lg-4">
+            <ul>
+              <li><a>Contact</a></li>
+              <li><a>FAQ</a></li>
+              <li><a>Join</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <ul>
+              <li><a><i class="fa fa-facebook-official"></i>Facebook</a></li>
+              <li><a><i class="fa fa-instagram"></i>Instagram</a></li>
+              <li><a><i class="fa fa-twitter"></i>Twitter</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>© 2016 HoneyCo Homes, All rights reserved.</p>
+      </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bower_components/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+      $('.carousel').carousel({
+          interval: false
+      }); 
+    </script>
   </body>
 </html>
