--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,9 +8,9 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,7 +22,7 @@
   <body>
     <div class="header">
       <div class="nav-bar">
-        <img class="logo" src="imgs/logo.png">
+        <img class="logo" src="../images/logo.png">
         <ul class="nav-links">
           <li><a href="#">About</a></li>
           <li><a href="#">Your Home</a></li>
@@ -31,7 +31,7 @@
           <li><a id="join" href="#">Join</a></li>
         </ul>
       </div>
-      <img id="banner" src="imgs/banner.jpg">
+      <img id="banner" src="../images/banner.jpg">
       <div class="wrapper">
         
         <div class="content">
@@ -39,7 +39,7 @@
           <h3>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms</h2>
           <a href="#" class="btn-yellow">Discover</a>
           <a href="#" id="down-arrow">
-            <img src="imgs/down-arrow.png">
+            <img src="../images/down-arrow.png">
           </a>
         </div>
       </div>
@@ -47,7 +47,7 @@
 
     <div class="retirement">
       <div class="section-image">
-        <img src="imgs/retirement.jpg">
+        <img src="../images/retirement.jpg">
       </div>
       <div class="sub-section">
         <div class="description">
@@ -59,7 +59,7 @@
     </div>
 
     <div class="security">
-      <img src="imgs/security.jpg">
+      <img src="../images/security.jpg">
       <div class="description col-xs-12 col-md-6">
         <h2>Security and safety. <br> In your home.</h2>
         <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable and accessible options.</p>
@@ -73,17 +73,17 @@
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img src="imgs/gallery.png">
+              <img src="../images/gallery.png">
             </div>
             <div class="item">
-              <img src="imgs/gallery.png">
+              <img src="../images/gallery.png">
             </div>
           </div>
           <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <img src="imgs/left-arrow.png">
+            <img src="../images/left-arrow.png">
           </a>
           <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <img src="imgs/right-arrow.png">
+            <img src="../images/right-arrow.png">
           </a>
         </div>
         <p>Can't remember if you turned off the stove? Is the door locked? <br>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="section-image">
-        <img src="imgs/community.jpg">
+        <img src="../images/community.jpg">
       </div>
     </div>
 
@@ -117,7 +117,7 @@
     </div>
 
     <div class="footer">
-      <img class="bg-logo" src="imgs/bg-logo.png">
+      <img class="bg-logo" src="../images/bg-logo.png">
       <div class="wrapper">
         <div class="col-lg-offset-6 col-lg-6">
           <div class="col-lg-4">
@@ -141,9 +141,9 @@
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
   
