--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
           <li><a id="join" href="#">Join</a></li>
         </ul>
       </div>
-      <img id="banner" src="imgs/banner.jpg">
       <div class="wrapper">
-        
         <div class="content">
           <h1>Connected living for <br> a booming population.</h1>
           <h3>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms</h2>
@@ -119,15 +117,15 @@
     <div class="footer">
       <img class="bg-logo" src="imgs/bg-logo.png">
       <div class="wrapper">
-        <div class="col-lg-offset-6 col-lg-6">
-          <div class="col-lg-4">
+        <div class="col-md-offset-6 col-md-6 col-xs-12">
+          <div class="col-md-4 col-xs-6">
             <ul>
               <li><a href="">Contact</a></li>
               <li><a href="">FAQ</a></li>
               <li><a href="">Join</a></li>
             </ul>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-xs-6">
             <ul>
               <li><a href=""><i class="fa fa-facebook-official"></i>Facebook</a></li>
               <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
