--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="security">
       <img src="imgs/security.jpg">
-      <div class="description col-xs-12 col-md-6">
+      <div class="description col-xs-12 col-sm-6">
         <h2>Security and safety. <br> In your home.</h2>
         <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable and accessible options.</p>
         <a href="#" class="btn-yellow">Learn More</a>
@@ -118,14 +118,14 @@
       <img class="bg-logo" src="imgs/bg-logo.png">
       <div class="wrapper">
         <div class="col-md-offset-6 col-md-6 col-xs-12">
-          <div class="col-md-4 col-xs-6">
+          <div class="col-sm-offset-4 col-sm-4 col-md-4 col-xs-6">
             <ul>
               <li><a href="">Contact</a></li>
               <li><a href="">FAQ</a></li>
               <li><a href="">Join</a></li>
             </ul>
           </div>
-          <div class="col-md-4 col-xs-6">
+          <div class="col-sm-4 col-md-4 col-xs-6">
             <ul>
               <li><a href=""><i class="fa fa-facebook-official"></i>Facebook</a></li>
               <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
