--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     <div class="content push">
       <div class="header">
         <div class="nav-bar">
-          <img class="logo" src="imgs/logo.png">
+          <!-- <img class="logo" src="imgs/logo.svg"> -->
+          <div class="nav-logo">
+            <img class="logo" src="imgs/logo.svg">
+            <span>HoneyCo</span>
+            <span class="small"> Homes</span>
+          </div>
           <ul class="nav-links">
             <li><a href="#" class="nav-about">About</a></li>
             <li><a href="#" class="nav-home">Your Home</a></li>
@@ -131,8 +136,8 @@
       <div class="footer">
         <img class="bg-logo" src="imgs/bg-logo.png">
         <div class="wrapper">
-          <div class="col-sm-offset-6 col-sm-6 col-xs-12">
-            <ul class="col-xs-offset-6">
+          <div class="col-xs-offset-6 col-xs-6">
+            <ul>
               <li><a href=""><i class="fa fa-facebook-official"></i>Facebook</a></li>
               <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
               <li><a href=""><i class="fa fa-twitter"></i>Twitter</a></li>
