video box update

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           <div class="description">
             <h3>A better residential <br> retirement model.</h3>
             <p>HoneyCo Homes is rethinking the traditional retirement living model. By harnessing the lastest in technology and engaging with the community, you now have access to the world's first distributed retirement community.</p>
-            <a href="img/retirement.jpg" class="swipebox btn-yellow btn-watch">Watch Video</a>
-            <a class="swipebox-video">My Videos</a>
+            <a class="swipebox-video btn-yellow btn-watch">Watch Video</a>
           </div>
         </div>
       </div>
