--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="footer">
         <img class="bg-logo" src="img/bg-logo.png">
         <div class="wrapper">
-          <div class="col-xs-offset-6 col-xs-6">
+          <div class="col-xs-offset-5 col-xs-7 col-sm-offset-8 col-sm-4">
             <ul>
               <li><a href=""><i class="fa fa-facebook-official"></i>Facebook</a></li>
               <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
