--- a/index.html
+++ b/index.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>HoneyCo</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>HoneyCo</title>
 
-    <!-- Bootstrap -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="bower_components/swipebox/src/css/swipebox.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <nav id="menu" class="panel" role="navigation">
+  <!-- Bootstrap -->
+  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="bower_components/swipebox/src/css/swipebox.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+<body>
+<nav id="menu" class="panel" role="navigation">
+  <ul class="nav-links">
+    <li><a href="#" class="nav-about">About</a></li>
+    <li><a href="#" class="nav-home">Your Home</a></li>
+    <li><a href="#" class="nav-tech">Technology</a></li>
+    <li><a href="#" class="nav-community">Community</a></li>
+    <li><a href="#" class="nav-join">Join</a></li>
+  </ul>
+</nav>
+<div class="content push">
+  <div class="header">
+    <div class="nav-bar">
+      <!-- <img class="logo" src="img/logo.svg"> -->
+      <div class="nav-logo">
+        <img class="logo" src="img/logo.svg">
+        <span>HoneyCo</span>
+        <span class="small"> Homes</span>
+      </div>
       <ul class="nav-links">
         <li><a href="#" class="nav-about">About</a></li>
         <li><a href="#" class="nav-home">Your Home</a></li>
@@ -29,133 +46,122 @@
         <li><a href="#" class="nav-community">Community</a></li>
         <li><a href="#" class="nav-join">Join</a></li>
       </ul>
-    </nav>
-    <div class="content push">
-      <div class="header">
-        <div class="nav-bar">
-          <!-- <img class="logo" src="img/logo.svg"> -->
-          <div class="nav-logo">
-            <img class="logo" src="img/logo.svg">
-            <span>HoneyCo</span>
-            <span class="small"> Homes</span>
-          </div>
-          <ul class="nav-links">
-            <li><a href="#" class="nav-about">About</a></li>
-            <li><a href="#" class="nav-home">Your Home</a></li>
-            <li><a href="#" class="nav-tech">Technology</a></li>
-            <li><a href="#" class="nav-community">Community</a></li>
-            <li><a href="#" class="nav-join">Join</a></li>
-          </ul>
-          <a href="#menu" class="menu-link">
-            <div class="mobileNavigator">&#9776;</div>
-          </a>
-        </div>
+      <a href="#menu" class="menu-link">
+        <div class="mobileNavigator">&#9776;</div>
+      </a>
+    </div>
 
-        <div class="wrapper">
-          <div class="content">
-            <h1>Connected living for <br> a booming population.</h1>
-            <h2>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms</h2>
-            <a href="#" class="btn-yellow btn-discover">Discover</a>
-            <a href="#" id="down-arrow">
-              <img src="img/down-arrow.png">
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="retirement">
-        <div class="section-image">
-          <img src="img/retirement.jpg">
-        </div>
-        <div class="sub-section">
-          <div class="description">
-            <h3>A better residential <br> retirement model.</h3>
-            <p>HoneyCo Homes is rethinking the traditional retirement living model. By harnessing the lastest in technology and engaging with the community, you now have access to the world's first distributed retirement community.</p>
-            <a class="swipebox-video btn-yellow btn-watch">Watch Video</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="security">
-        <img src="img/security.jpg">
-        <div class="description col-xs-12 col-sm-6">
-          <h3>Security and safety. <br> In your home.</h3>
-          <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable and accessible options.</p>
-          <a href="#" class="btn-yellow btn-learn">Learn More</a>
-        </div>
-      </div>
-
-      <div class="gallery">
-        <div class="wrapper">
-          <h3>A smart home, at your fingertips.</h3>
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="img/gallery.png">
-              </div>
-              <div class="item">
-                <img src="img/gallery.png">
-              </div>
-            </div>
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-              <img src="img/left-arrow.png">
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-              <img src="img/right-arrow.png">
-            </a>
-          </div>
-          <p>Can't remember if you turned off the stove? Is the door locked? <br>
-          <span class="light">No worries. With a HoneyCo Home, peace of mind is always at hand.</span></p>
-          <a href="#" class="btn-yellow btn-learn">Learn More</a>
-        </div>
-      </div>
-
-      <div class="community">
-        <div class="sub-section">
-          <div class="description">
-            <h3>A grassroots community at your doorstep.</h3>
-            <p>Your in-person community ambassador will help keep you connected with the people, events and opportunities around you.</p>
-            <a href="#" class="btn-yellow btn-learn">Learn More</a>
-          </div>
-        </div>
-        <div class="section-image">
-          <img src="img/community.jpg">
-        </div>
-      </div>
-
-      <div class="connect">
-        <h4>Get Connected. Stay Connected.</h4>
-        <p>Sign up to receive updates from HoneyCo and apply for early access</p>
-        <form action="#">
-          <div class="input-group">
-             <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter your email for updates" required>
-             <button class="btn btn-lg" type="submit">Submit</button>
-          </div>
-         </form>
-      </div>
-
-      <div class="footer">
-        <img class="bg-logo" src="img/bg-logo.png">
-        <div class="wrapper">
-          <div class="col-xs-offset-5 col-xs-7 col-sm-offset-8 col-sm-4">
-            <ul>
-              <li><a href=""><i class="fa fa-facebook-official"></i>Facebook</a></li>
-              <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
-              <li><a href=""><i class="fa fa-twitter"></i>Twitter</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="copyright">
-          <p>© 2016 HoneyCo Homes, All rights reserved.</p>
-        </div>
+    <div class="wrapper">
+      <div class="content">
+        <h1>Connected living for <br> a booming population.</h1>
+        <h2>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms
+        </h2>
+        <a href="#" class="btn-yellow btn-discover">Discover</a>
+        <a href="#" id="down-arrow">
+          <img src="img/down-arrow.png">
+        </a>
       </div>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/swipebox/src/js/jquery.swipebox.min.js"></script>
-    <script src="js/bigslide.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+  </div>
+
+  <div class="retirement">
+    <div class="section-image">
+      <img src="img/retirement.jpg">
+    </div>
+    <div class="sub-section">
+      <div class="description">
+        <h3>A better residential <br> retirement model.</h3>
+        <p>HoneyCo Homes is rethinking the traditional retirement living model. By harnessing the lastest in technology
+          and engaging with the community, you now have access to the world's first distributed retirement
+          community.</p>
+        <a class="swipebox-video btn-yellow btn-watch">Watch Video</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="security">
+    <img src="img/security.jpg">
+    <div class="description col-xs-12 col-sm-6">
+      <h3>Security and safety. <br> In your home.</h3>
+      <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable
+        and accessible options.</p>
+      <a href="#" class="btn-yellow btn-learn">Learn More</a>
+    </div>
+  </div>
+
+  <div class="gallery">
+    <div class="wrapper">
+      <h3>A smart home, at your fingertips.</h3>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="img/gallery.png">
+          </div>
+          <div class="item">
+            <img src="img/gallery.png">
+          </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <img src="img/left-arrow.png">
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <img src="img/right-arrow.png">
+        </a>
+      </div>
+      <p>Can't remember if you turned off the stove? Is the door locked? <br>
+        <span class="light">No worries. With a HoneyCo Home, peace of mind is always at hand.</span></p>
+      <a href="#" class="btn-yellow btn-learn">Learn More</a>
+    </div>
+  </div>
+
+  <div class="community">
+    <div class="sub-section">
+      <div class="description">
+        <h3>A grassroots community at your doorstep.</h3>
+        <p>Your in-person community ambassador will help keep you connected with the people, events and opportunities
+          around you.</p>
+        <a href="#" class="btn-yellow btn-learn">Learn More</a>
+      </div>
+    </div>
+    <div class="section-image">
+      <img src="img/community.jpg">
+    </div>
+  </div>
+
+  <div class="connect">
+    <h4>Get Connected. Stay Connected.</h4>
+    <p>Sign up to receive updates from HoneyCo and apply for early access</p>
+    <form action="#">
+      <div class="input-group">
+        <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter your email for updates"
+               required>
+        <button class="btn btn-lg" type="submit">Submit</button>
+      </div>
+    </form>
+  </div>
+
+  <div class="footer">
+    <img class="bg-logo" src="img/bg-logo.png">
+    <div class="wrapper">
+      <div class="col-xs-offset-5 col-xs-7 col-sm-offset-8 col-sm-4">
+        <ul>
+          <li><a href=""><i class="fa fa-facebook-official"></i>Facebook</a></li>
+          <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
+          <li><a href=""><i class="fa fa-twitter"></i>Twitter</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>© 2016 HoneyCo Homes, All rights reserved.</p>
+    </div>
+  </div>
+</div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/swipebox/src/js/jquery.swipebox.min.js"></script>
+<script src="js/bigslide.js"></script>
+<script src="js/script.js"></script>
+</body>
 </html>
