Fixing up javascript and scrolling

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <body>
 <nav id="menu" class="panel" role="navigation">
   <ul class="nav-links">
-    <li><a href="#" class="nav-about">About</a></li>
-    <li><a href="#" class="nav-home">Your Home</a></li>
-    <li><a href="#" class="nav-tech">Technology</a></li>
-    <li><a href="#" class="nav-community">Community</a></li>
-    <li><a href="#" class="nav-join">Join</a></li>
+    <li><a href="#retirement" class="nav-link">About</a></li>
+    <li><a href="#security" class="nav-link">Your Home</a></li>
+    <li><a href="#gallery" class="nav-link">Technology</a></li>
+    <li><a href="#community" class="nav-link">Community</a></li>
+    <li><a href="#connect" class="nav-link">Join</a></li>
   </ul>
 </nav>
 <div class="content push">
@@ -40,11 +40,11 @@
         <span class="small"> Homes</span>
       </div>
       <ul class="nav-links">
-        <li><a href="#" class="nav-about">About</a></li>
-        <li><a href="#" class="nav-home">Your Home</a></li>
-        <li><a href="#" class="nav-tech">Technology</a></li>
-        <li><a href="#" class="nav-community">Community</a></li>
-        <li><a href="#" class="nav-join">Join</a></li>
+        <li><a href="#retirement" class="nav-link">About</a></li>
+        <li><a href="#security" class="nav-link">Your Home</a></li>
+        <li><a href="#gallery" class="nav-link">Technology</a></li>
+        <li><a href="#community" class="nav-link">Community</a></li>
+        <li><a href="#connect" class="nav-link">Join</a></li>
       </ul>
       <a href="#menu" class="menu-link">
         <div class="mobileNavigator">&#9776;</div>
@@ -56,15 +56,15 @@
         <h1>Connected living for <br> a booming population.</h1>
         <h2>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms
         </h2>
-        <a href="#" class="btn-yellow btn-discover">Discover</a>
-        <a href="#" id="down-arrow">
+        <a href="#connect" class="btn-yellow">Discover</a>
+        <a href="#retirement" id="down-arrow">
           <img src="img/down-arrow.png">
         </a>
       </div>
     </div>
   </div>
 
-  <div class="retirement">
+  <div id="retirement" class="retirement">
     <div class="section-image">
       <img src="img/retirement.jpg">
     </div>
@@ -79,17 +79,17 @@
     </div>
   </div>
 
-  <div class="security">
+  <div id="security" class="security">
     <img src="img/security.jpg">
     <div class="description col-xs-12 col-sm-6">
       <h3>Security and safety. <br> In your home.</h3>
       <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable
         and accessible options.</p>
-      <a href="#" class="btn-yellow btn-learn">Learn More</a>
+      <a href="#connect" class="btn-yellow">Learn More</a>
     </div>
   </div>
 
-  <div class="gallery">
+  <div id="gallery" class="gallery">
     <div class="wrapper">
       <h3>A smart home, at your fingertips.</h3>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -110,17 +110,17 @@
       </div>
       <p>Can't remember if you turned off the stove? Is the door locked? <br>
         <span class="light">No worries. With a HoneyCo Home, peace of mind is always at hand.</span></p>
-      <a href="#" class="btn-yellow btn-learn">Learn More</a>
+      <a href="#connect" class="btn-yellow btn-cta">Learn More</a>
     </div>
   </div>
 
-  <div class="community">
+  <div id="community" class="community">
     <div class="sub-section">
       <div class="description">
         <h3>A grassroots community at your doorstep.</h3>
         <p>Your in-person community ambassador will help keep you connected with the people, events and opportunities
           around you.</p>
-        <a href="#" class="btn-yellow btn-learn">Learn More</a>
+        <a href="#connect" class="btn-yellow">Learn More</a>
       </div>
     </div>
     <div class="section-image">
@@ -128,7 +128,7 @@
     </div>
   </div>
 
-  <div class="connect">
+  <div id="connect" class="connect">
     <h4>Get Connected. Stay Connected.</h4>
     <p>Sign up to receive updates from HoneyCo and apply for early access</p>
     <form action="#">
