Fixing scrolling interfereing with carousel slider [#1]

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <body>
 <nav id="menu" class="panel" role="navigation">
   <ul class="nav-links">
-    <li><a href="#retirement" class="nav-link">About</a></li>
-    <li><a href="#security" class="nav-link">Your Home</a></li>
-    <li><a href="#gallery" class="nav-link">Technology</a></li>
-    <li><a href="#community" class="nav-link">Community</a></li>
-    <li><a href="#connect" class="nav-link">Join</a></li>
+    <li><a href="#retirement" class="nav-link" data-scroll>About</a></li>
+    <li><a href="#security" class="nav-link" data-scroll>Your Home</a></li>
+    <li><a href="#gallery" class="nav-link" data-scroll>Technology</a></li>
+    <li><a href="#community" class="nav-link" data-scroll>Community</a></li>
+    <li><a href="#connect" class="nav-link" data-scroll>Join</a></li>
   </ul>
 </nav>
 <div class="content push">
@@ -42,11 +42,11 @@
         <span class="small"> Homes</span>
       </div>
       <ul class="nav-links">
-        <li><a href="#retirement" class="nav-link">About</a></li>
-        <li><a href="#security" class="nav-link">Your Home</a></li>
-        <li><a href="#gallery" class="nav-link">Technology</a></li>
-        <li><a href="#community" class="nav-link">Community</a></li>
-        <li><a href="#connect" class="nav-link">Join</a></li>
+        <li><a href="#retirement" class="nav-link" data-scroll>About</a></li>
+        <li><a href="#security" class="nav-link" data-scroll>Your Home</a></li>
+        <li><a href="#gallery" class="nav-link" data-scroll>Technology</a></li>
+        <li><a href="#community" class="nav-link" data-scroll>Community</a></li>
+        <li><a href="#connect" class="nav-link" data-scroll>Join</a></li>
       </ul>
       <a href="#menu" class="menu-link">
         <div class="mobileNavigator">&#9776;</div>
@@ -58,8 +58,8 @@
         <h1>Connected living for <br> a booming population.</h1>
         <h2>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms
         </h2>
-        <a href="#connect" class="btn-yellow">Discover</a>
-        <a href="#retirement" id="down-arrow">
+        <a href="#connect" class="btn-yellow" data-scroll>Discover</a>
+        <a href="#retirement" id="down-arrow" data-scroll>
           <img src="img/down-arrow.png">
         </a>
       </div>
@@ -77,7 +77,7 @@
           and engaging with the community, you now have access to the world's first distributed retirement
           community.</p>
         <!--<a class="swipebox-video btn-yellow btn-watch">Watch Video</a> -->
-        <a class="btn-yellow" href="#connect">Learn More</a>
+        <a class="btn-yellow" href="#connect" data-scroll>Learn More</a>
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@
       <h3>Security and safety. <br> In your home.</h3>
       <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable
         and accessible options.</p>
-      <a href="#connect" class="btn-yellow">Learn More</a>
+      <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
     </div>
   </div>
 
@@ -113,7 +113,7 @@
       </div>
       <p>Can't remember if you turned off the stove? Is the door locked? <br>
         <span class="light">No worries. With a HoneyCo Home, peace of mind is always at hand.</span></p>
-      <a href="#connect" class="btn-yellow btn-cta">Learn More</a>
+      <a href="#connect" class="btn-yellow btn-cta" data-scroll>Learn More</a>
     </div>
   </div>
 
@@ -123,7 +123,7 @@
         <h3>A grassroots community at your doorstep.</h3>
         <p>Your in-person community ambassador will help keep you connected with the people, events and opportunities
           around you.</p>
-        <a href="#connect" class="btn-yellow">Learn More</a>
+        <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
       </div>
     </div>
     <div class="section-image">
