Changed out images on carousel slider [#1]

--- a/index.html
+++ b/index.html
@@ -98,10 +98,16 @@
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="img/gallery.png">
+            <img src="img/portal_dashboard.png">
           </div>
           <div class="item">
-            <img src="img/gallery.png">
+            <img src="img/portal_community.png">
+          </div>
+          <div class="item">
+            <img src="img/portal_doors.png">
+          </div>
+          <div class="item">
+            <img src="img/portal_firesafety.png">
           </div>
         </div>
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
