--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li><a href="#retirement" class="nav-link" data-scroll>About</a></li>
     <li><a href="#security" class="nav-link" data-scroll>Your Home</a></li>
     <li><a href="#gallery" class="nav-link" data-scroll>Technology</a></li>
-    <li><a href="#community" class="nav-link" data-scroll>Community</a></li>
+    <li><a href="#community" class="nav-link" data-scroll>Society</a></li>
     <li><a href="#connect" class="nav-link" data-scroll>Join</a></li>
   </ul>
 </nav>
@@ -45,7 +45,7 @@
         <li><a href="#retirement" class="nav-link" data-scroll>About</a></li>
         <li><a href="#security" class="nav-link" data-scroll>Your Home</a></li>
         <li><a href="#gallery" class="nav-link" data-scroll>Technology</a></li>
-        <li><a href="#community" class="nav-link" data-scroll>Community</a></li>
+        <li><a href="#community" class="nav-link" data-scroll>Society</a></li>
         <li><a href="#connect" class="nav-link" data-scroll>Join</a></li>
       </ul>
       <a href="#menu" class="menu-link">
