Internet of caring things [#5]

--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
   <div id="security" class="security">
     <img src="img/security.jpg">
     <div class="description col-xs-12 col-sm-6">
-      <h3>Security and safety. <br> In your home.</h3>
-      <p>Whether it's where you raised your kids or a new adventure entirely, enjoy your home on your terms. Affordable
-        and accessible options.</p>
+      <h3>The Internet of caring things.</h3>
+      <p>Technological obsolescence is obsolete. HoneyCo has built the universal connector of smart home features. We do
+        the research and the integration of the hardware so you don't have to. And when something better comes out,
+        we'll make sure it works for you.</p>
       <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
     </div>
   </div>
