Grassroots community -> HoneyCo Society [#4]

--- a/index.html
+++ b/index.html
@@ -127,9 +127,19 @@
   <div id="community" class="community">
     <div class="sub-section">
       <div class="description">
-        <h3>A grassroots community at your doorstep.</h3>
-        <p>Your in-person community ambassador will help keep you connected with the people, events and opportunities
-          around you.</p>
+        <h3>unRetire</h3>
+        <p>
+          Introducing HoneyCo Society, a novel way to grow as we mature.
+          <br /><br/>
+          The HoneyCo Soceity is a unique human and online network of a multi-generational members. Inspired by
+          volunteerism, continuing education, and wellness, the HoneyCo Society puts avenues of social engagement within
+          reach of any resident.
+          <br /><br />
+          Each resident selects a dedicated HoneyCo Ambassador. The HoneyCo Ambassador is your in-person, real-life
+          problem solver, activity coordinator, social connector, and expert listener.
+          <br /><br />
+          HoneyCo Society @Home is the digital counterpart to your HoneyCo Ambassador. Browse local and curated
+          activities online or message a friend.</p>
         <a href="#connect" class="btn-yellow" data-scroll>Learn More</a>
       </div>
     </div>
