residential retirement model -> Rent a Home [#3]. Also fixed unRetire formatting

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     </div>
     <div class="sub-section">
       <div class="description">
-        <h3>A better residential <br> retirement model.</h3>
-        <p>HoneyCo Homes is rethinking the traditional retirement living model. By harnessing the lastest in technology
-          and engaging with the community, you now have access to the world's first distributed retirement
-          community.</p>
+        <h3>Rent a home, <br/>not a hallway</h3>
+        <p>HoneyCo rental homes are located in multigenerational neighborhoods. These homes offer the resident a
+          maintenance-free lifestyle, supported by smart home technology and connected to community. Make the most of
+          your unRetirement in a HoneyCo Home.</p>
         <!--<a class="swipebox-video btn-yellow btn-watch">Watch Video</a> -->
         <a class="btn-yellow" href="#connect" data-scroll>Learn More</a>
       </div>
@@ -128,10 +128,7 @@
     <div class="sub-section">
       <div class="description">
         <h3>unRetire</h3>
-        <p>
-          Introducing HoneyCo Society, a novel way to grow as we mature.
-          <br /><br/>
-          The HoneyCo Soceity is a unique human and online network of a multi-generational members. Inspired by
+        <p>Introducing <strong>HoneyCo Society</strong>: a unique human and online network of multi-generational members. Inspired by
           volunteerism, continuing education, and wellness, the HoneyCo Society puts avenues of social engagement within
           reach of any resident.
           <br /><br />
