--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="wrapper">
       <div class="content">
         <h1>Connected living for <br> a booming population.</h1>
-        <h2>Powered by technology and community, <br> welcome to the new retirement. <br> This is living on your terms
+        <h2>Powered by technology and community, <br> welcome to unRetirement.
         </h2>
         <a href="#connect" class="btn-yellow" data-scroll>Discover</a>
         <a href="#retirement" id="down-arrow" data-scroll>
