Adding phone and office address to footer.  Changing footer CSS to cope with additional column

--- a/index.html
+++ b/index.html
@@ -162,11 +162,18 @@
   <div class="footer">
     <img class="bg-logo" src="img/bg-logo.png">
     <div class="wrapper">
-      <div class="col-xs-offset-5 col-xs-7 col-sm-offset-8 col-sm-4">
+      <div class="col-sm-offset-4 col-xs-12 col-sm-4">
         <ul>
-          <li><a href="https://www.facebook.com/honeycohomes"><i class="fa fa-facebook-official"></i>Facebook</a></li>
-          <li><a href="https://twitter.com/honeycohomes"><i class="fa fa-twitter"></i>Twitter</a></li>
-          <li><a href="https://angel.co/honeyco-homes"><i class="fa fa-angellist"></i>AngelList</a></li>
+          <li><i class="fa fa-fw fa-phone"></i>&nbsp;(615) 266-5243</li>
+          <li><i class="fa fa-fw fa-home"></i>&nbsp;331 54th Ave N.</li>
+          <li><i class="fa fa-fw"></i>&nbsp;Nashville, TN 37209</li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <ul>
+          <li><a href="https://www.facebook.com/honeycohomes"><i class="fa fa-fw fa-facebook-official"></i>&nbsp;Facebook</a></li>
+          <li><a href="https://twitter.com/honeycohomes"><i class="fa fa-fw fa-twitter"></i>&nbsp;Twitter</a></li>
+          <li><a href="https://angel.co/honeyco-homes"><i class="fa fa-fw fa-angellist"></i>&nbsp;AngelList</a></li>
         </ul>
       </div>
     </div>
