Adding e-mail to footer.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
           <li><i class="fa fa-fw fa-phone"></i>&nbsp;(615) 266-5243</li>
           <li><i class="fa fa-fw fa-home"></i>&nbsp;331 54th Ave N.</li>
           <li><i class="fa fa-fw"></i>&nbsp;Nashville, TN 37209</li>
+          <li><i class="fa fa-fw fa-envelope"></i>&nbsp;<a href="mailto:info@honeyco.com">info@honeyco.com</a></li>
         </ul>
       </div>
       <div class="col-xs-12 col-sm-4">
