--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-84564290-1', 'auto');
+  ga('require', 'linkid');
   ga('send', 'pageview');
 
 </script></script>
